fix: some responses in swagger/controllers
