# controllers/income/monthIncome.js
@@ -8,10 +8,10 @@ const monthIncome = async (req, res) => {
 
     const type = 'income';
 
-    const report = await reportTypeYearMonthDetail(id, type, year, month);
+    const transactions = await reportTypeYearMonthDetail(id, type, year, month);
 
     res.status(200).json({
-        report
+        transactions
     })
 };
 
